add lang in whatApp process
