# apps/api/openapi.json
@@ -2449,6 +2449,10 @@
           "email_subscribed": {
             "type": "boolean"
           },
+          "language": {
+            "type": "string",
+            "example": "en"
+          },
           "created_at": {
             "type": "string",
             "format": "date-time"
@@ -2558,6 +2562,10 @@
           },
           "email_subscribed": {
             "type": "boolean"
+          },
+          "language": {
+            "type": "string",
+            "example": "en"
           }
         }
       },
@@ -2598,6 +2606,10 @@
             "type": "string",
             "nullable": true,
             "minLength": 8
+          },
+          "language": {
+            "type": "string",
+            "example": "en"
           }
         }
       },
